--- a/pages/quiz.css
+++ b/pages/quiz.css
@@ -9,6 +9,7 @@
 :root {
     --bg-color: #f4f6fa;
     --purple: #a729f5;
+    --purple-hover: rgba(167, 41, 245, 0.7);
     --primary-text-color: #313e51;
     --secondary-text-color: #626c7f;
     --buttom-bg: #fff;
@@ -146,6 +147,18 @@ main {
     background: var(--buttom-bg);
     padding: 12px;
     font-size: 18px;
+    font-weight: 500;
+    border-radius: 12px;
+    box-shadow: var(--shadow);
+    color: var(--primary-text-color);
+    cursor: pointer;
+}
+
+.alternativas label:hover {
+    & span {
+        background: var(--bg-acessibilidade);
+        color: var(--purple);
+    }
 }
 
 .alternativas label:has(input:checked) {
@@ -179,6 +192,25 @@ main {
 .alternativas input {
     display: none;
 }
+
+.alternativas button {
+    padding: 16px;
+    border-radius: 12px;
+    border: none;
+    background: var(--purple);
+    color: var(--white);
+    width: 100%;
+
+    font-size: 18px;
+    font-weight: 500;
+    transition: background 0.3s;
+}
+
+.alternativas button:hover {
+    background: var(--purple-hover);
+    cursor: pointer;
+}
+
 
 @media(min-width: 1100px) {
     header {
@@ -252,6 +284,7 @@ main {
     .alternativas label {
         font-size: 22px;
         padding: 18px 20px;
+        border-radius: 24px;
     }
 
     .alternativas div {
