adicionada a funcao para escolher o tema do quiz no index.html

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ main h1 {
     font-size: 18px;
     font-weight: 500;
     color: var(--primary-text-color);
+    cursor: pointer;
 }
 
 .assuntos button div {
