--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -158,6 +158,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 12px;
+    margin-bottom: 12px;
 }
 
 .alternativas label {
@@ -180,7 +181,6 @@ main {
 }
 
 .alternativas label:has(input:checked) {
-
     outline: 3px solid var(--purple);
 
     & span {
@@ -248,7 +248,6 @@ main {
     background: var(--purple-hover);
     cursor: pointer;
 }
-
 
 @media(min-width: 1100px) {
     body {
